Revision history for Toadfarm

0.08
       * Remove VERSION from Makefile.PL

0.07     Sun May  5 16:26:13 2013
       * Improved status page for reload plugin
       * Add support for custom error pages and assets

0.06     Thu May  2 00:18:17 2013
       * Fix need to run chdir before git commands
       * Fix argument parsing for script/toadfarm

0.05     Wed May  1 22:45:02 2013
       * Add support for custom log level from config
       * Fix major routing bug

0.04     Wed May  1 19:56:25 2013
       * Add Reload plugin

0.03     Tue Apr 30 02:22:38 2013
       * Add Ubuntu setup example
       * Fix cannot pass MOJO_CONFIG to sub apps
       * Accept log settings from config

0.02     Mon Apr 29 21:36:48 2013
       * Add $VERSION
       * Add suppor for "plugins"
       * Will not poke into mojolicious internals

0.01     Mon Apr 29 20:28:14 2013
       * Toadfarm can dispatch based on headers