@@ -4,8 +4,6 @@
   plugins => [
     Reload => {
       path => '/bad-path',
-      file => '/tmp/toadfarm-reload-test-ipc.conf',
-      interval => 0.1,
       repositories => {
         toadfarm => {
           branch => 'master',
