@@ -1,0 +1,17 @@
+#!perl
+{
+  apps => [
+    't::lib::WithoutRules' => {},
+  ],
+  plugins => [
+    Reload => {
+      path => '/reload',
+      repositories => {
+        'cool-repo' => {
+          path => '/dev/null',
+          branch => 'invalid',
+        },
+      },
+    },
+  ],
+}
