@@ -2,6 +2,7 @@ Revision history for Toadfarm
 
 0.08
        * Remove VERSION from Makefile.PL
+       * Fix mouting app without conditions
 
 0.07     Sun May  5 16:26:13 2013
        * Improved status page for reload plugin
